--- a/app/views/admin/topics/show.html.slim
+++ b/app/views/admin/topics/show.html.slim
@@ -1,2 +1,5 @@
-h1 Admin::Topics#show
-p Find me in app/views/admin/topics/show.html.slim
+h2 = 'Topic: ' + @topic.name
+p Topic description
+
+h3 Questions
+p List of questions
