--- a/app/views/admin/categories/_form.html.slim
+++ b/app/views/admin/categories/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @category, url: admin_category_path do |f|
+= form_for [:admin, @category] do |f|
   .form-group
     = f.label :name
     = f.text_field :name, placeholder: 'Category name', class: 'form-control'
