--- a/app/views/admin/categories/_form.html.slim
+++ b/app/views/admin/categories/_form.html.slim
@@ -1,4 +1,5 @@
 = form_for [:admin, @category] do |f|
+  = render 'shared/error_messages', object: @category
   .form-group
     = f.label :name
     = f.text_field :name, placeholder: 'Category name', class: 'form-control'
