--- a/app/views/admin/topics/_form.html.slim
+++ b/app/views/admin/topics/_form.html.slim
@@ -1,4 +1,5 @@
 = form_for [:admin, @topic] do |f|
+  = render 'shared/error_messages', object: @topic
   .form-group
     = f.label :name
     = f.text_field :name, placeholder: 'Topic name', class: 'form-control'
