Display flash messages in admin dashboard

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,4 +9,7 @@ html
   body
     .container
       = render 'layouts/header'
+      - flash.each do |key, value|
+        div class="alert alert-#{key}"
+          = value
       = yield
