--- a/app/views/admin/questions/_questions.html.slim
+++ b/app/views/admin/questions/_questions.html.slim
@@ -12,4 +12,4 @@
         td
           = link_to 'Edit', edit_admin_question_path(question), class: 'btn btn-default'
           = ' '
-          = link_to 'Delete', admin_question_path(question), method: :delete, class: 'btn btn-danger'
+          = link_to 'Delete', [:admin, question], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
