Enable destroy action for topics

--- a/app/views/admin/topics/_topics.html.slim
+++ b/app/views/admin/topics/_topics.html.slim
@@ -22,4 +22,4 @@
         td
           = link_to 'Edit', edit_admin_topic_path(topic), class: 'btn btn-default'
           = ' '
-          = link_to 'Delete', admin_topic_path(topic), method: :delete, class: 'btn btn-danger'
+          = link_to 'Delete', admin_topic_path(topic), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
