--- a/app/views/admin/categories/_categories.html.slim
+++ b/app/views/admin/categories/_categories.html.slim
@@ -12,4 +12,4 @@
         td
           = link_to 'Edit', edit_admin_category_path(category), class: 'btn btn-default'
           = ' '
-          = link_to 'Delete', admin_category_path(category), method: :delete, class: 'btn btn-danger'
+          = link_to 'Delete', admin_category_path(category), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
