--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -15,8 +15,8 @@ nav.navbar.navbar-default[style="margin-top:20px"]
             | Home
             span.sr-only
               | (current)
-        li
-          = link_to 'Categories', admin_categories_path
+        / li
+        /   = link_to 'Categories', admin_categories_path
         li.dropdown
           a.dropdown-toggle[href="#" data-toggle="dropdown" role="button" aria-expanded="false"]
             | Sections
@@ -26,28 +26,28 @@ nav.navbar.navbar-default[style="margin-top:20px"]
               = link_to 'Categories', admin_categories_path
             li
               = link_to 'Topics', admin_topics_path
-            li
-              = link_to 'Questions', '#'
-            li.divider
-            li
-              a[href="#"]
-                | Settings
-            li.divider
-            li
-              a[href="#"]
-                | Administration
+            / li.divider
+            / li
+            /   a[href="#"]
+            /     | Settings
+            / li.divider
+            / li
+            /   a[href="#"]
+            /     | Administration
       ul.nav.navbar-nav.navbar-right
-        li
-          = link_to 'Name', '#'
-        li.dropdown
-          a.dropdown-toggle[href="#" data-toggle="dropdown" role="button" aria-expanded="false"]
-            | Admin profile
-            span.caret
-          ul.dropdown-menu[role="menu"]
-            li
-              = link_to 'Settings', '#'
-            li
-              = link_to 'Another action', '#'
-            li.divider
-            li
-              = link_to 'Log out', '#'
+        - if current_admin
+          li.dropdown
+            a.dropdown-toggle[href="#" data-toggle="dropdown" role="button" aria-expanded="false"]
+              = current_admin.email
+              span.caret
+            ul.dropdown-menu[role="menu"]
+              li
+                = link_to 'Settings', edit_admin_registration_path
+              / li
+              /   = link_to 'Another action', '#'
+              li.divider
+              li
+                = link_to 'Log out', destroy_admin_session_path, method: :delete
+        - else
+          li
+            = link_to 'Log in', new_admin_session_path
