--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -42,9 +42,9 @@ nav.navbar.navbar-default[style="margin-top:20px"]
               span.caret
             ul.dropdown-menu[role="menu"]
               li
-                = link_to 'Settings', edit_admin_registration_path
-              / li
-              /   = link_to 'Another action', '#'
+                = link_to 'Settings', edit_admin_admin_path(current_admin)
+              li
+                = link_to 'Administration', admin_admins_path
               li.divider
               li
                 = link_to 'Log out', destroy_admin_session_path, method: :delete
