--- a/app/views/admin/questions/_form.html.slim
+++ b/app/views/admin/questions/_form.html.slim
@@ -15,6 +15,7 @@
   .form-group
     = f.label :image
     = f.file_field :image
+    = f.hidden_field :image_cache
 
   = image_tag @question.image.thumb.url if @question.image?
 
