--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -5,3 +5,6 @@ h2 = link_to 'Categories', admin_categories_path
 h2 = link_to 'Topics', admin_topics_path
 = link_to 'New topic', new_admin_topic_path, class: 'btn btn-default'
 = render 'admin/topics/topics', topics: @topics
+
+h2 = link_to 'Achievements', admin_achievements_path
+= render 'admin/achievements/achievements', achievements: @achievements
