--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -22,10 +22,9 @@ nav.navbar.navbar-default[style="margin-top:20px"]
             | Sections
             span.caret
           ul.dropdown-menu[role="menu"]
-            li
-              = link_to 'Categories', admin_categories_path
-            li
-              = link_to 'Topics', admin_topics_path
+            li = link_to 'Categories', admin_categories_path
+            li = link_to 'Topics', admin_topics_path
+            li = link_to 'Achievements', admin_achievements_path
             / li.divider
             / li
             /   a[href="#"]
