--- a/app/views/admin/imports/new.html.slim
+++ b/app/views/admin/imports/new.html.slim
@@ -5,4 +5,4 @@ h2 Import questions from file
     = label_tag :hello
     = file_field_tag 'file'
 
-  = submit_tag 'Submit', class: 'btn btn-default'
+  = submit_tag 'Import', class: 'btn btn-default'
