Create facts, add facts to dashboard

--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -10,3 +10,6 @@ h2 = link_to 'Topics', admin_topics_path
 
 h2 = link_to 'Achievements', admin_achievements_path
 = render 'admin/achievements/achievements', achievements: @achievements
+
+h2 = link_to 'Facts', admin_facts_path
+= render 'admin/facts/facts', facts: @facts
