Purchases: refactor, add to dashboard

--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -13,3 +13,6 @@ h2 = link_to 'Achievements', admin_achievements_path
 
 h2 = link_to 'Facts', admin_facts_path
 = render 'admin/facts/facts', facts: @facts
+
+h2 = link_to 'Purchase types', admin_purchase_types_path
+= render 'admin/purchase_types/purchase_types', purchase_types: @purchase_types
