--- a/app/views/admin/questions/_questions.html.slim
+++ b/app/views/admin/questions/_questions.html.slim
@@ -1,15 +1,16 @@
 - unless questions.empty?
   table.table
     thead
-      tr
-        td id
-        td Content
-        td Actions
-    - for question in questions
-      tr
-        td = question.id
-        td = link_to question.content, edit_admin_question_path(question)
-        td
-          = link_to 'Edit', edit_admin_question_path(question), class: 'btn btn-default'
-          = ' '
-          = link_to 'Delete', [:admin, question], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
+      tr.row
+        th id
+        th Content
+        th.col-sm-2 Actions
+    tbody
+      - for question in questions
+        tr.row
+          td = question.id
+          td = link_to question.content, edit_admin_question_path(question)
+          td.col-sm-2
+            = link_to 'Edit', edit_admin_question_path(question), class: 'btn btn-default'
+            = ' '
+            = link_to 'Delete', [:admin, question], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
