--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,4 +1,4 @@
-nav.navbar.navbar-default[style="margin-top:20px"]
+nav.navbar.navbar-static-top.navbar-default
   .container-fluid
     .navbar-header
       button.navbar-toggle.collapsed[type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"]
