--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,9 +7,10 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   body
+    = render 'layouts/header'
     .container
-      = render 'layouts/header'
       - flash.each do |key, value|
         div class="alert alert-#{key}"
           = value
       = yield
+    = render 'layouts/footer'
