--- a/app/views/admin/categories/index.html.slim
+++ b/app/views/admin/categories/index.html.slim
@@ -1,4 +1,6 @@
-h2 Categories
-= link_to 'New category', new_admin_category_path, class: 'btn btn-default'
+div.page-header
+  h2
+    | Категории
+    = link_to 'Новая', new_admin_category_path, class: 'btn btn-default'
 
 = render 'admin/categories/categories', categories: @categories
