--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -1,18 +1,28 @@
-h2 = link_to 'Categories', admin_categories_path
-= link_to 'New category', new_admin_category_path, class: 'btn btn-default'
-= render 'admin/categories/categories', categories: @categories
+/ h2 = link_to 'Categories', admin_categories_path
+/ = link_to 'New category', new_admin_category_path, class: 'btn btn-default'
+/ = render 'admin/categories/categories', categories: @categories
 
-h2 = link_to 'Topics', admin_topics_path
-.btn-group
-  = link_to 'New topic', new_admin_topic_path, class: 'btn btn-default'
-  = link_to 'Import', new_admin_import_path, class: 'btn btn-default'
-= render 'admin/topics/topics', topics: @topics
+/ h2 = link_to 'Topics', admin_topics_path
+/ .btn-group
+/   = link_to 'New topic', new_admin_topic_path, class: 'btn btn-default'
+/   = link_to 'Import', new_admin_import_path, class: 'btn btn-default'
+/ = render 'admin/topics/topics', topics: @topics
 
-h2 = link_to 'Achievements', admin_achievements_path
-= render 'admin/achievements/achievements', achievements: @achievements
+/ h2 = link_to 'Achievements', admin_achievements_path
+/ = render 'admin/achievements/achievements', achievements: @achievements
 
-h2 = link_to 'Facts', admin_facts_path
-= render 'admin/facts/facts', facts: @facts
+/ h2 = link_to 'Facts', admin_facts_path
+/ = render 'admin/facts/facts', facts: @facts
 
-h2 = link_to 'Purchase types', admin_purchase_types_path
-= render 'admin/purchase_types/purchase_types', purchase_types: @purchase_types
+/ h2 = link_to 'Purchase types', admin_purchase_types_path
+/ = render 'admin/purchase_types/purchase_types', purchase_types: @purchase_types
+
+div.page-header
+  h2 Разделы
+
+.list-group
+  = link_to 'Категории', admin_categories_path, class: 'list-group-item'
+  = link_to 'Темы', admin_topics_path, class: 'list-group-item'
+  = link_to 'Достижения', admin_achievements_path, class: 'list-group-item'
+  = link_to 'Факты', admin_facts_path, class: 'list-group-item'
+  = link_to 'Покупки', admin_purchase_types_path, class: 'list-group-item'
