--- a/app/views/admin/facts/index.slim
+++ b/app/views/admin/facts/index.slim
@@ -1,3 +1,6 @@
-h1 Facts
+div.page-header
+  h2
+    | Факты
+    = link_to 'Новый', new_admin_fact_path, class: 'btn btn-default'
 
 = render 'facts', facts: @facts
