--- a/app/views/admin/topics/index.html.slim
+++ b/app/views/admin/topics/index.html.slim
@@ -1,3 +1,8 @@
-h1 Topics
+div.page-header
+  h2
+    | Темы
+    .btn-group
+      = link_to 'Новая', new_admin_topic_path, class: 'btn btn-default'
+      = link_to 'Импорт', new_admin_import_path, class: 'btn btn-default'
 
 = render 'topics', topics: @topics
