--- a/app/views/admin/achievements/_achievements.html.slim
+++ b/app/views/admin/achievements/_achievements.html.slim
@@ -6,6 +6,6 @@
         td Name
         td Description
         td Icon
-        td Actions
+        td Действия
     tbody
       = render achievements
