--- a/app/views/admin/questions/_form.html.slim
+++ b/app/views/admin/questions/_form.html.slim
@@ -35,4 +35,5 @@
           = answers_form.text_field :content, class: 'form-control'
     = f.add_nested_fields_link :answers
 
-  = f.submit 'Submit', class: 'btn btn-default'
+  .form-group
+    = f.submit 'Submit', class: 'btn btn-default'
