--- a/app/views/admin/achievements/show.html.slim
+++ b/app/views/admin/achievements/show.html.slim
@@ -7,7 +7,7 @@ table.table
       td Name
       td Description
       td Icon
-      td Actions
+      td Действия
   tbody
     = render @achievement
 
