--- a/app/views/admin/categories/index.html.slim
+++ b/app/views/admin/categories/index.html.slim
@@ -3,4 +3,11 @@ div.page-header
     | Категории
     = link_to 'Новая', new_admin_category_path, class: 'btn btn-default'
 
-= render 'admin/categories/categories', categories: @categories
+- unless @categories.empty?
+  table.table
+    thead
+      tr
+        th Название
+        th Действия
+    - for category in @categories
+      = render category
