--- a/app/views/admin/purchase_types/_purchase_types.slim
+++ b/app/views/admin/purchase_types/_purchase_types.slim
@@ -5,7 +5,7 @@
         th Identifier
         th Multiplier
         th Topic unlocker
-        th Actions
+        th Действия
     tbody
       - for purchase_type in purchase_types
           tr
@@ -13,6 +13,6 @@
             td = purchase_type.multiplier
             td = purchase_type.topic
             td
-              = link_to 'Edit', edit_admin_purchase_type_path(purchase_type), class: 'btn btn-default'
+              = link_to 'Изменить', edit_admin_purchase_type_path(purchase_type), class: 'btn btn-default'
               = ' '
-              = link_to 'Delete', [:admin, purchase_type], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
+              = link_to 'Удалить', [:admin, purchase_type], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
