--- a/app/views/admin/questions/_questions.html.slim
+++ b/app/views/admin/questions/_questions.html.slim
@@ -2,15 +2,13 @@
   table.table
     thead
       tr.row
-        th id
-        th Content
-        th.col-sm-2 Actions
+        th Содержание
+        th.col-sm-4.col-md-3 Действия
     tbody
       - for question in questions
         tr.row
-          td = question.id
           td = link_to question.content, edit_admin_question_path(question)
-          td.col-sm-2
-            = link_to 'Edit', edit_admin_question_path(question), class: 'btn btn-default'
+          td.col-sm-4.col-md-3
+            = link_to 'Изменить', edit_admin_question_path(question), class: 'btn btn-default'
             = ' '
-            = link_to 'Delete', [:admin, question], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
+            = link_to 'Удалить', [:admin, question], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
