--- a/app/views/admin/topics/index.html.slim
+++ b/app/views/admin/topics/index.html.slim
@@ -5,4 +5,5 @@ div.page-header
       = link_to 'Новая', new_admin_topic_path, class: 'btn btn-default'
       = link_to 'Импорт', new_admin_import_path, class: 'btn btn-default'
 
-= render 'topics', topics: @topics
+= render 'admin/topics/topics', topics: @topics
+= paginate @topics
