--- a/app/views/admin/topics/_topic.slim
+++ b/app/views/admin/topics/_topic.slim
@@ -1,7 +1,8 @@
 tr
   td = link_to topic.name, admin_topic_path(topic)
-  td = topic.visible
   td = link_to topic.category, admin_category_path(topic.category)
+  td = topic.visible?
+  td = topic.paid?
   td = topic.featured?
   td
     = link_to 'Изменить', edit_admin_topic_path(topic), class: 'btn btn-default'
