--- a/app/views/admin/topics/show.html.slim
+++ b/app/views/admin/topics/show.html.slim
@@ -5,13 +5,7 @@ h2
     = @topic.category.name
 
 table.table
-  thead
-    tr
-      th Название
-      th Видимость
-      th Категория
-      th Отмеченная
-      th Действия
+  = render 'topic_header'
   tbody
     = render @topic
 
