--- a/app/views/admin/topics/_topics.slim
+++ b/app/views/admin/topics/_topics.slim
@@ -1,6 +1,6 @@
 - unless topics.empty?
   table.table
-    = render 'topic_header'
+    = render 'admin/topics/topic_header'
     tbody
       - for topic in topics
         = render topic
