Dashboard: add sessions count to topics

--- a/app/views/admin/topics/_topic.slim
+++ b/app/views/admin/topics/_topic.slim
@@ -4,6 +4,7 @@ tr
   td = topic.visible?
   td = topic.paid?
   td = topic.featured?
+  td = topic.game_sessions.count
   td
     = link_to 'Изменить', edit_admin_topic_path(topic), class: 'btn btn-default'
     = ' '
