Dashboard: add numeration to questions

--- a/app/views/admin/topics/index.html.slim
+++ b/app/views/admin/topics/index.html.slim
@@ -6,4 +6,4 @@ div.page-header
       = link_to 'Импорт', new_admin_import_path, class: 'btn btn-default'
 
 = render 'admin/topics/topics', topics: @topics
-/= paginate @topics
+= paginate @topics
