--- a/app/views/admin/topics/show.html.slim
+++ b/app/views/admin/topics/show.html.slim
@@ -19,15 +19,17 @@ h3
   table.table
     thead
       tr
+        th.col-sm-1 №
         th Содержание
         th.col-sm-4.col-md-3 Действия
     tbody
-      - for question in @questions
+      - @questions.each_with_index do |question, index|
         tr
+          td = index + 1
           td = link_to question.content, edit_admin_question_path(question)
           td.col-sm-4.col-md-3
             = link_to 'Изменить', edit_admin_question_path(question), class: 'btn btn-default'
             = ' '
             = link_to 'Удалить', [:admin, question], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
 
-= paginate @questions
+/= paginate @questions
