Dashboard: add proposals

--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -27,3 +27,4 @@ div.page-header
   = link_to 'Факты', admin_facts_path, class: 'list-group-item'
   = link_to 'Покупки', admin_purchase_types_path, class: 'list-group-item'
   = link_to 'Жалобы', admin_reports_path, class: 'list-group-item'
+  = link_to 'Предложения', admin_proposals_path, class: 'list-group-item'
