Clean up uploaders

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,8 +1,7 @@
 doctype html
 html
   head
-    title
-      | QuizApp
+    title QuizApp
     meta content="IE=edge" http-equiv="X-UA-Compatible"
     meta content="width=device-width, initial-scale=1" name="viewport"
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
